solucionar inicio de sesion

--- a/index.html
+++ b/index.html
@@ -14,16 +14,11 @@
         <nav class="nav">
             <img src="./assets/img/logo2-removebg-preview(2).png" alt="">
             <ul class="ul">
-                <li class="ul__li"><a href="./index.html">Home</a>
-                    <ul>
-                        <li class="ul__ul__li"><a href="#transferencias">Transferencias</a></li>
-                        <li class="ul__ul__li"><a href="#dolares">Comprar dolares</a></li>
-                        <li class="ul__ul__li"><a href="#plazo-fijo">Plazo fijo</a></li>
-                        <li class="ul__ul__li"><a href="#prestamos">Prestamos</a></li>
-                    </ul>
-                </li>
-                <li class="ul__li"><a href="./pages/quienes-somos.html">Quienes somos</a></li>
-                <li class="ul__li li__contacto"><a href="./pages/contacto.html">Contacto</a></li>
+                <li class="ul__li"><a href="./index.html">Home</a></li>
+                <li class="ul__li"><a href="#transferencias">Transferencias</a></li>
+                <li class="ul__li"><a href="#dolares">Comprar dolares</a></li>
+                <li class="ul__li"><a href="#plazo-fijo">Plazo fijo</a></li>
+                <li class="ul__li"><a href="#prestamos">Prestamos</a>
             </ul>
         </nav>
     </header>
